[NOID] Formats everything (#3870)
* [NOID] Formats all projects

* [NOID] Run spotlessApply

---------

Co-authored-by: neo-technology-build-agent <neo-technology-build-agent@users.noreply.github.com>